<resources>
    <string name="app_name">BonApp!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">Start timer</string>
    <string name="stop">Stop timer</string>
    <string name="start_time">10:00</string>
    <string name="default_time">10:00</string>
    <string name="lets_eat">Ready !</string>
    <string name="EditProfileTitle">Edit Profile</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ready_in_min_img">ready_in_min_img</string>
    <string name="_000">000</string>
    <string name="servings">servings</string>
    <string name="mins">mins</string>
    <string name="health">health</string>
    <string name="not_healthy">nothealthy</string>
    <string name="vegetarian">veg</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="validate_food_preferences">Done</string>
    <string name="ingredient_name">Ingredient_name</string>
    <string name="instruction_step">Instruction_step</string>
    <string name="search_for_recipes">Search for Recipes</string>
    <string name="profile_button">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_button_title">Edit Profile</string>
    <string name="sendtowatch">sendtowatch</string>
    <string name="bookmark">bookmark</string>
    <string name="useontab">useontab</string>
    <string name="intolerancesTitle">Intolerances</string>
    <string name="dietTitle">Diet</string>
    <string name="diet_non_restrictive">Non-Restrictive</string>
    <string name="nameTitle">Name</string>
    <string name="favorites">Favourites</string>
    <string name="no_favorite_yet">You haven\'t saved any recipes yet</string>
    <string name="favourites">Favourites</string>
    <string name="img_of_recipe">fav recipe image</string>
    <string name="sign_out">Sign out</string>
    <string name="search_results_title">Results</string>
    <string name="ingredient_instruction">Enter ingredients (comma separated)</string>
    <string name="search_for_recipes_title">Search for Recipes</string>
    <string name="search_instructions_text">Enter a comma separated list of ingredients</string>
    <string name="like_button_description">like_button</string>
    <string name="search_text_hint">e.g. tomatoes, olive oil, ...</string>
    <string name="difficulty_rating_title">Difficulty:</string>

</resources>