<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="616dp"
                android:layout_height="287dp"
                android:contentDescription="@+id/recipe_img"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="-25dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/like_button_description"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/colorAccent"
                android:tint="@color/common_google_signin_btn_text_light_focused"
                app:borderWidth="0.5dp"
                app:srcCompat="@drawable/ic_thumb_up"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-65dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/bookmark"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="#FFFFFF"
                app:borderWidth="0.5dp"
                app:srcCompat="@drawable/bookmark" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_sendtowatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-65dp"
                android:layout_marginEnd="65dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/sendtowatch"
                android:focusable="true"
                app:backgroundTint="#E86565"
                app:borderWidth="0.5dp"
                app:srcCompat="@drawable/applewatchapps" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_useontab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-65dp"
                android:layout_marginEnd="125dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/useontab"
                android:focusable="true"
                app:backgroundTint="#D8CDA6"
                app:borderWidth="0.5dp"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:clickable="false"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipe_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="20dp"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:text=""
                        android:textStyle="bold"  />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/timeEt"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="time"
                            android:text="@string/default_time"
                         />

                        <Button
                            android:id="@+id/startBtn"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:layout_weight="1"
                           />


                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:contentDescription="@string/ready_in_min_img"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.166"
                            app:srcCompat="@android:drawable/ic_menu_recent_history" />

                        <TextView
                            android:id="@+id/recipe_ready_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_000"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView7"
                            app:layout_constraintTop_toTopOf="parent"  />


                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/servings"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/recipe_ready_in"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_search_for_recipes" />

                        <TextView
                            android:id="@+id/recipe_servings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_000"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView8"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/aggregate_likes_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="35dp"
                            android:contentDescription="@string/health"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/recipe_servings"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_thumb_up" />

                        <TextView
                            android:id="@+id/recipe_healthy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_000"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/aggregate_likes_icon"
                            app:layout_constraintTop_toTopOf="parent" />






                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/ingredients"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recipe_ingredients_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/instructions"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recipe_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recipe_instructions_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>